Pomodoro/.metadata/.plugins/org.eclipse.cdt.ui/StateMashineButton.build.log
11:40:55 **** Incremental Build of configuration Debug for project StateMashineButton ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/Button.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/Button.d" -MT"Core/Src/Button.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/Button.o"
In file included from ../Core/Src/Button.c:8:
../Core/Inc/Button.h:29:15: error: field 'ButtonPressed' declared as a function
   29 |         void *ButtonPressed(void);
      |               ^~~~~~~~~~~~~
../Core/Src/Button.c: In function 'ButtonPressed':
../Core/Src/Button.c:24:1: warning: control reaches end of non-void function [-Wreturn-type]
   24 | }
      | ^
make: *** [Core/Src/subdir.mk:43: Core/Src/Button.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

11:40:56 Build Failed. 2 errors, 1 warnings. (took 795ms)

